# digital-girl

./: .gitignore  PROJECT_MEMORY.md  README.md
backend/config/: companion-core.env.example  companion-core.toml.example  digital-girl.env.example
backend/scripts/: check-livetalking-assets.ps1  clone-livetalking.ps1  install-livetalking-assets.ps1  start-companion-core.ps1  start-control-panel.ps1  start-livetalking.ps1  test-backend.ps1
docs/: architecture.md  backend-testing.md  decisions.md  development-plan.md  environment-notes.md  model-assets.md  python-rust-boundary.md  roadmap.md  runbook.md
frontend/: mobile-web-notes.md
patches/: livetalking-companion-core-llm.patch
services/companion-core/: Cargo.toml  README.md
services/companion-core/src/: main.rs
