[package]
name = "companion-core"
version = "0.1.0"
edition = "2024"
default-run = "digital-girl-launcher"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["clock"] }
eframe = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
